# OddEvenLinkedList

./: CMakeLists.txt  README.md
inc/: node.hpp  solution.hpp
src/: main.cpp  node.cpp  solution.cpp
